fixed cards grid: aligned last card in cards box

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -496,6 +496,13 @@ a {
   .form-group-checkbox input + label {
     margin-bottom: 1rem;
   }
+
+  &-invisible {
+    visibility: hidden;
+    height: 0;
+    overflow: hidden;
+    pointer-events: none;
+  }
 }
 
 
